tests/compile-fail/integration__integration__general__local_in_std.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:22:13
   │
22 │         int x = 4;
   │             ^^^^^ update assignment with this operation not supported by format


